# game_server

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 4682359fee18_create_user_table.py
app/: database.py  main.py  redis.py
app/api/: auth.py  game.py  room.py
app/core/: config.py
app/models/: user.py
app/schemas/: auth.py  game.py
app/services/: auth.py  game.py
app/tests/: conftest.py  test_auth.py  test_game.py
tests/: conftest.py  test_auth.py  test_room.py
